successfully rebased remote branch

--- a/src/pages/LandingPage.module.css
+++ b/src/pages/LandingPage.module.css
@@ -72,7 +72,7 @@
 }
 
 .vectorParent:hover {
-  background-color: var(--color-slategray); 
+  background-color: var(--color-gainsboro); 
 }
 
 .frameItem {
