added usePostPatient hook

--- a/src/pages/new-patient/NewPatient.module.css
+++ b/src/pages/new-patient/NewPatient.module.css
@@ -1,10 +1,10 @@
-.newPatientChild {
+/* .newPatientChild {
   align-self: stretch;
   height: 1px;
   position: relative;
   border-top: 1px solid rgba(0, 40, 68, 0.21);
   box-sizing: border-box;
-}
+} */
 
 .newPatient,
 .newPatientInner {
